<resources>
    <string name="app_name">Areas de figuras geométricas</string>
    <string name="base">Base</string>
    <string name="lado">Lado</string>
    <string name="altura">Altura</string>
    <string name="radio">Radio</string>
    <string name="texto">Seleccione la figura a la que desea calcular el area</string>
    <string name="cuadro">Cuadro</string>
    <string name="triangulo">Triángulo</string>
    <string name="rectangulo">Rectángulo</string>
    <string name="circulo">Círculo</string>
    <string name="area">Area</string>
    <string name="calcular">Calcular</string>

</resources>
